--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -37,7 +37,7 @@
 
 %%%%% WŁASNE DEFINICJE I POLECENIA
 %
-\theoremstyle{definition} \newtheorem{definition}{Definition}[chapter]
+\theoremstyle{definition} \newtheorem*{definition}{Definicja}
 %\theoremstyle{remark} \newtheorem{remark}[definition]{Observation}
 %\theoremstyle{plain} \newtheorem{theorem}[defini"tion]{Theorem}
 %\theoremstyle{plain} \newtheorem{lemma}[definition]{Lemma}
@@ -58,6 +58,7 @@
   keywordstyle=\bf\ttfamily\color[rgb]{0,.3,.7},
   commentstyle=\color[rgb]{0.133,0.545,0.133},
   stringstyle={\color[rgb]{0.75,0.49,0.07}},
+  morekeywords={Applicative, State, Store, Task, Tasks, Build},
   upquote=true,
   breaklines=true,
   breakatwhitespace=true,
@@ -65,13 +66,18 @@
   keepspaces=true,
   showstringspaces=false,
   literate=*{`}{{`}}{1}
-           {->}{$\rightarrow{}$}{1}
-           {=>}{$\Rightarrow{}$}{1}
+            {=>}{$\Rightarrow{}$}{1}
+            {->}{$\rightarrow{}$}{1}
+}
+
+\lstdefinestyle{haskell-inl}{
+  style=haskell-style,
+  basicstyle=\ttfamily
 }
 
 \lstdefinelanguage{Haleff}{
   morekeywords=[1]{forall, data, let, rec, and, in, val, type, Type, signature, effect, Effect, fn, if, then, else},
-  morekeywords=[2]{match, handle, handler, with, end, return, finally, open },
+  morekeywords=[2]{match, handle, handler, resume, with, end, return, finally, open },
 %  lineskip=-0.1ex,
   alsodigit=!\$\%&*+-./:<=>?@^_~,
   sensitive=true,
@@ -88,6 +94,11 @@
   columns=fullflexible,
   keepspaces=true,
   literate=*{`}{{`}}{1}
+}
+
+\lstdefinestyle{Haleff-inl}{
+  language=Haleff,
+  basicstyle=\ttfamily
 }
 
 \begin{document}
