Add initial contents for the 5th chapter
Also modified some code fragments, mainly including busy scheduler
to make it more similiar to the original implementation in Haskell.

--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -101,6 +101,9 @@
   basicstyle=\ttfamily
 }
 
+\newcommand{\BSaLC}{,,Build systems {\`a} la carte''}
+\newcommand{\BSaLCTP}{,,Build systems {\`a} la carte: Theory and practice''}
+
 \begin{document}
 
 %%%%% POCZĄTEK ZASADNICZEGO TEKSTU PRACY
