--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -136,3 +136,17 @@
   pages={71--84},
   year={1993}
 }
+
+@unpublished{translation_rust,
+    title = {{Translation of Build Systems \`{a} la Carte to Rust}},
+    author = {Varun Gandhi},
+    year = {2018},
+    note = {\url{https://web.archive.org/web/20191020001014/https://github.com/cutculus/bsalc-alt-code/blob/master/BSalC.rs}}
+}
+
+@unpublished{translation_kotlin,
+    title = {{Translation of Build Systems \`{a} la Carte to Kotlin}},
+    author = {Paco Estevez and Devesh Shetty},
+    year = {2019},
+    note = {\url{https://web.archive.org/web/20191021224324/https://github.com/arrow-kt/arrow/blob/paco-tsalc/modules/docs/arrow-examples/src/test/kotlin/arrow/BuildSystemsALaCarte.kt}}
+}
